# Neurophile

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLINICAL_GUIDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  VULNERABILITY.md  check_zenodo.py  pyproject.toml
configs/: ci_rehab.yaml  default.yaml
data_pipeline/eeg_preprocessing/: standardize_montage.py
data_pipeline/fetchers/: clone_author_repos.sh  fetch_kul_dataset.py  fetch_openneuro_bids.py
pipelines/eq_hypothesis/: README.md  __init__.py  run_eq_hypothesis.py  run_harmonizer_hypothesis.py
pipelines/mne_pipeline/: README.md  __init__.py  compare_raw_vs_clean.py  preprocess.py  train_mne_pipeline.py
scripts/: eeglab_bridge.py  federated_average.py  run_eeglab_ica.m  run_inference.py  train_bids_real.py  train_global_ci_model.py  train_kul_real.py  visualize_eeg.py
src/neuroaura/: __init__.py
src/neuroaura/cli/: __init__.py  main.py
src/neuroaura/decoding/: __init__.py  aad_evaluation.py  base.py  linear_decoder.py
src/neuroaura/devices/: __init__.py  base.py  brainproducts.py  muse.py  openbci.py
src/neuroaura/federated/: __init__.py
src/neuroaura/models/: __init__.py  global_trainer.py
src/neuroaura/models/adapters/: __init__.py  kul_cnn_adapter.py  mesgarani_crn_adapter.py
src/neuroaura/models/core/: __init__.py  base_aad_model.py
src/neuroaura/preprocessing/: __init__.py  standard.py
src/neuroaura/preprocessing/ci_artifact/: __init__.py  adaptive_filter.py  ica_cancellation.py  pipeline.py  quality.py  spatial_filter.py  template_subtraction.py
src/neuroaura/stimulus/: __init__.py  ci_vocoder.py  engine.py  envelope.py
src/neuroaura/sync/: __init__.py  lsl.py  software.py  ttl.py
src/neuroaura/visualization/: __init__.py
src/neurophile/devices/: openbci.py
src/neurophile/models/: global_trainer.py
src/neurophile/models/adapters/: mesgarani_crn_adapter.py
src/neurophile/stimulus/: ci_vocoder.py
stimuli/: manifest.yaml
tests/: conftest.py
tests/unit/: test_base_aad_model.py  test_ci_artifact.py  test_ci_vocoder.py  test_decoder.py  test_ica_cancellation.py  test_metadata.py
