[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "neuroaura._version.__version__"}

[project]
name = "neuroaura"
dynamic = ["version"]
description = "Open-source EEG platform for auditory attention decoding and cochlear implant rehabilitation"
authors = [
    { name = "NeuroAuRA Contributors" },
]
license = { text = "Apache-2.0" }
keywords = [
    "eeg", "auditory attention decoding", "aad", "cochlear implant",
    "neuroplasticity", "rehabilitation", "bci", "mne-python",
    "federated learning", "neuroscience", "real-time",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
requires-python = ">=3.10"

# ── Core dependencies (Phase 0 + 1: offline pipeline) ─────────────────────────
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "mne>=1.6",
    "mne-bids>=0.14",
    "pandas>=2.0",
    "h5py>=3.10",
    "scikit-learn>=1.4",
    "pyriemann>=0.6",
    "PyYAML>=6.0",
    "jsonschema>=4.21",
    "rich>=13.7",
    "click>=8.1",
    "pooch>=1.8",        # dataset download + checksum verification
    "pybv>=0.7",         # BrainVision format write
    "edfio>=0.4",        # EDF+ format read/write
]

[project.optional-dependencies]
# Phase 2: real-time streaming
realtime = [
    "pylsl>=1.16",
    "pyxdf>=1.16",
    "sounddevice>=0.4",
]

# Phase 3: stimulus presentation (heavy GUI dep)
psychopy = ["psychopy>=2024.1"]

# Phase 4: federated learning
federated = ["flwr>=1.7"]

# Visualization dashboard
viz = ["plotly>=5.18", "dash>=2.15"]

# Deep learning decoders
dl = ["torch>=2.2"]

# Device drivers
openbci = ["brainflow>=5.12"]  # covers OpenBCI Cyton + Ganglion

# Development
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

all = [
    "neuroaura[realtime]",
    "neuroaura[federated]",
    "neuroaura[viz]",
    "neuroaura[dl]",
    "neuroaura[openbci]",
]

[project.scripts]
neuroaura = "neuroaura.cli.main:cli"

[project.urls]
Homepage       = "https://github.com/neuroaura/neuroaura"
Documentation  = "https://neuroaura.readthedocs.io"
Repository     = "https://github.com/neuroaura/neuroaura"
"Bug Tracker"  = "https://github.com/neuroaura/neuroaura/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["neuroaura*"]

[tool.setuptools.package-data]
neuroaura = [
    "data/schemas/*.json",
    "stimulus/schemas/*.yaml",
    "py.typed",
]

# ── Ruff (lint + format) ──────────────────────────────────────────────────────
[tool.ruff]
line-length = 90
target-version = "py310"
extend-exclude = ["docs/", "notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C4", "I", "UP"]
ignore = ["E203", "E501", "B905"]

[tool.ruff.lint.isort]
known-first-party = ["neuroaura"]
lines-after-imports = 2

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = false          # relax until coverage grows; tighten per-module
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true   # many EEG libs have no stubs

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
markers = [
    "slow: requires real dataset download",
    "hardware: requires physical EEG device",
    "network: requires internet access",
    "realtime: requires LSL / audio drivers",
]

[tool.coverage.run]
source = ["src/neuroaura"]
omit = ["*/tests/*", "*/_scaffold_*"]

[tool.coverage.report]
fail_under = 70   # starting low; raises to 80 once Phase 1 is complete
